# crucible-protocol

./: .gitignore  LICENSE  Makefile  README.md  crucible-gates.yaml  demo.sh  pyproject.toml
docs/: claude-design-source.html  external-replication.md  render_figures.mjs
examples/known-bad/: README.md  pyproject.toml
examples/known-bad/.github/workflows/: ci.yml
examples/known-bad/src/payments/: engine.py
examples/known-bad/tests/: conftest.py
examples/known-bad/tests/integration/: test_payments.py
examples/known-good/: README.md  pyproject.toml
examples/known-good/.github/workflows/: ci.yml
examples/known-good/src/payments/: engine.py
examples/known-good/tests/: conftest.py
examples/known-good/tests/integration/: test_payments.py
figures/: manifest.json
src/crucible/: __init__.py  cli.py  detectors.py  engine.py  result.py
tests/: test_detectors.py
