[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "crucible-protocol"
version = "0.1.0"
description = "Functional reference auditor for the CRUCIBLE Protocol — detecting measurement fraud in AI-assisted software development."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "NXTG.AI" }]
keywords = ["testing", "test-quality", "mutation-testing", "coverage", "audit", "ai-code-review"]
dependencies = ["PyYAML>=5.4"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
# Tool gates shell out / import these when present; absent -> the gate SKIPs.
tools = ["pytest-cov>=4.0", "mutmut>=2.4"]

[project.scripts]
crucible = "crucible.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
